# home-finder

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.fly  LICENSE  README.md  crontab  dedupe.json  fly.toml  main.py  mutmut_config.py  pyproject.toml  railway.toml  rental_market_research.md
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/adr/: 001-laplacian-bimodality-floorplan-detection.md
docs/plans/: 2026-02-02-floorplan-analysis-design.md  2026-02-02-floorplan-analysis-implementation.md  2026-02-02-weighted-deduplication.md  2026-02-02-zoopla-403-investigation.md  2026-02-03-floorplan-gate-design.md  2026-02-03-floorplan-gate-implementation.md
docs/reviews/: A1-models.md  A2-scrapers.md  A3-filters.md  A4-database.md  A5-web.md  B1-errors.md  B2-security.md  B3-performance.md  B4-testing.md  C-roadmap.md
docs/sources/: README.md  onthemarket.md  openrent.md  rightmove.md  zoopla.md
docs/tickets/: research-backfill-existing-data.md  research-e2-comprehensive.md  ticket-1-sound-insulation.md  ticket-10-price-history-market-intel.md  ticket-2-micro-area-profiles.md  ticket-3-market-strategy.md  ticket-4-creative-scene.md  ticket-5-true-cost.md  ticket-6-environmental.md  ticket-7-property-status-tracking.md  ticket-8-ai-viewing-messages.md  ticket-9-one-click-enquiry.md
experiments/dedup/: .gitignore  BRIEF_TEXT_SIGNALS.md  collect.py  embed_snapshot.py  evaluate.py  generate_pairs.py  generate_report.py  hash_snapshot.py  image_cache.py  image_hashing.py  import_labels.py  patch_zoopla_details.py  pyproject.toml  scorer.py  signals.py  sscd_embeddings.py
experiments/dedup/labels/: labels_20260210_011725.json  labels_merged.json
experiments/dedup/templates/: report.html.j2
experiments/dedup/tests/: conftest.py  test_generate_report.py  test_report_ui.py
experiments/layout-inference/: BRIEF.md  SESSION_PROMPTS.md  TICKETS.md  collect_ground_truth.py  evaluate.py  pyproject.toml  run_inference.py
experiments/layout-inference/tests/: conftest.py  test_evaluate.py
mutants/: mutmut-stats.json  pyproject.toml
mutants/tests/: conftest.py
research/: backfill.md  creativescenet4.md  e2comprehensive.md  e2e15microares.md  e4creativescenee2.md  envriskt6.md  marketstratt3.md  microareaprofiles.md  moremicroareas.md  nonaggregatorviability.md  soundinsulation.md  t4createscenemost.md  truecost.md
scripts/: audit_image_cache.py  audit_merges.py  backfill_wards.py  compare_parsers.py  debug_epc_scores.py  generate_icons.py  reclassify_epc_images.py  sync-to-fly.sh  test_notification.py  validate_epc_detector.py
src/home_finder/: __init__.py  config.py  logging.py  main.py  models.py
tests/: conftest.py  test_config.py  test_main_dedup_existing.py  test_main_re_enrich.py  test_models.py  test_pipeline_orchestration.py  test_property_based.py  test_reanalysis_orchestration.py
tests/fixtures/: onthemarket_detail_no_floorplan.html  onthemarket_detail_with_floorplan.html  onthemarket_search.html  openrent_detail_no_floorplan.html  openrent_detail_with_floorplan.html  openrent_search.html  rightmove_detail_no_floorplan.html  rightmove_detail_with_floorplan.html  rightmove_search.html  traveltime_response.json  zoopla_detail_no_floorplan.html  zoopla_detail_with_floorplan.html  zoopla_search.html
tests/integration/: __init__.py  conftest.py  test_commute_integration.py  test_cross_platform_dedup_e2e.py  test_cross_run_reanalysis_e2e.py  test_detail_fetcher_e2e.py  test_enrichment_pipeline_e2e.py  test_full_pipeline_e2e.py  test_off_market_e2e.py  test_pipeline.py  test_quality_analysis_integration.py  test_real_scraping.py  test_run_pipeline_e2e.py  test_sort_verification.py  test_telegram_notification_e2e.py
tests/test_data/: test_area_context.py  test_location_mappings.py
tests/test_db/: __init__.py  test_async_context_managers.py  test_connection_lifecycle.py  test_migrations.py  test_observability.py  test_off_market.py  test_pipeline_runs.py  test_price_history.py  test_source_listings_linkage.py  test_status.py  test_storage.py  test_storage_analysis_retry.py  test_storage_dropped.py  test_storage_enrichment.py  test_storage_quality.py  test_storage_reanalysis.py
tests/test_filters/: test_commute.py  test_criteria.py  test_cross_platform_rerun.py  test_deduplication.py  test_deduplication_e2e.py  test_deduplication_overhaul.py  test_deduplication_weighted.py  test_detail_enrichment.py  test_enrichment_result.py  test_fit_score.py  test_floor_area.py  test_floorplan.py  test_location.py  test_off_market.py  test_quality.py  test_quality_eval.py  test_quality_prompts.py  test_quality_respx.py  test_token_usage.py
tests/test_notifiers/: conftest.py  test_telegram.py  test_telegram_status.py  test_telegram_web.py
tests/test_pipeline/: test_analysis_timeout.py  test_event_recorder.py  test_scraper_metrics.py
tests/test_scrapers/: test_detail_fetcher_parsing.py  test_location_utils.py  test_onthemarket.py  test_openrent.py  test_rightmove.py  test_scraper_location_leakage.py  test_zoopla.py  test_zoopla_models.py
tests/test_scripts/: test_audit_image_cache.py  test_reclassify_epc_images.py
tests/test_utils/: test_circuit_breaker.py  test_cost_calculator.py  test_epc_detector.py  test_floorplan_detector.py  test_image_cache.py  test_image_hash.py  test_image_processing.py  test_negotiation.py  test_postcode_lookup.py  test_viewing_message.py
tests/test_web/: conftest.py  test_app.py  test_browser_e2e.py  (+3 more)
(+149 files in other folders)
