[project]
name = "dedup-experiment"
version = "0.1.0"
description = "Deduplication experiment - calibrate weights against ground truth labels"
requires-python = ">=3.11"
dependencies = [
    "home-finder",
    "jinja2>=3.1",
    "numpy>=1.24",
    "rapidfuzz>=3.6",
    "scikit-learn>=1.4",
    "sentence-transformers>=2.6",
]

[project.optional-dependencies]
sscd = ["torch>=2.0", "torchvision>=0.15"]

[tool.uv]
package = false

[tool.uv.sources]
home-finder = { path = "../..", editable = true }

[dependency-groups]
dev = [
    "playwright>=1.58.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-playwright>=0.7.2",
]
